Migration to JavaFX and JPackage